--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3,24 +3,118 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
-.uploadbox{
+
+.uploadbox {
     border-style: solid;
     border-radius: 5px !important;
     border-width: 2px;
     left: 50%;
     margin: auto !important;
-    height: auto!important;
-    width: 800px!important;
+    height: auto !important;
+    width: 800px !important;
     border-color: black;
 }
-.mytextshadow{
+
+@media only screen and (min-width: 200px) and (max-width: 374px) {
+    .checkEqip {
+        margin-right: 5% !important;
+    }
+    .mywidth {
+        margin-left: 20% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 375px) and (max-width: 425px) {
+    .checkEqip {
+        margin-right: 10% !important;
+    }
+    .mywidth {
+        margin-left: 20% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 425px) and (max-width: 765px) {
+    .checkEqip {
+        margin-right: 20% !important;
+    }
+    .mywidth {
+        margin-left: 20% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 766px) and (max-width: 1024px) {
+    .checkEqip {
+        margin-right: 25% !important;
+    }
+    .mywidth {
+        margin-left: 40% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    .checkEqip {
+        margin-right: 35% !important;
+    }
+    .mywidth {
+        margin-left: 40% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 2560px) {
+    .checkEqip {
+        margin-right: 36% !important;
+    }
+    .mywidth {
+        margin-left: 45% !important;
+        width: 160px !important;
+        overflow: hidden;
+    }
+}
+
+.mytextshadow {
     text-shadow: 4px 2px 2px gray;
 }
-.index_m_menu{
+
+.myicon {
+    font-size: 50px;
+    color: #1e96ff;
+    align-content: center;
+    margin-left: 47%;
+}
+
+.mywidth {
+    float: left;
+    margin-left: 45%;
+}
+
+.checkEqip {
+    margin-right: 10%;
+    border: solid;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border-color: black;
+    padding-top: 10px;
+    border-width: 5px;
+    float: right;
+}
+
+.index_m_menu {
     opacity: 1 !importnant;
     background-color: white !important;
 }
-.mybackImg{
+
+.mybackImg {
     position: absolute;
     max-width: 100%;
     top: 0;
@@ -29,21 +123,26 @@
     right: 0;
     height: auto;
 }
-.mylogostyle{
+
+.mylogostyle {
     width: auto;
     max-width: 200px;
 }
-.mytextef{
+
+.mytextef {
     -webkit-text-stroke: 1px #000
 }
-.aligncenter_1{
+
+.aligncenter_1 {
     left: 50%;
     margin: auto !important;
 }
-.indexpagebox{
+
+.indexpagebox {
     min-height: 400px;
 }
-.index_top_box_style{
+
+.index_top_box_style {
     border-style: solid;
     border-width: 1px;
     border-color: aqua;
@@ -51,7 +150,8 @@
     border-top-right-radius: 30px;
     margin-bottom: 5px;
 }
-.index_mid_box_style{
+
+.index_mid_box_style {
     margin-top: 1px;
     min-height: 120px;
     max-height: 120px;
@@ -62,9 +162,10 @@
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    
+
 }
-.index_bottom_box_style{
+
+.index_bottom_box_style {
     border-style: solid;
     border-width: 1px;
     border-color: aqua;
@@ -77,7 +178,8 @@
     padding-right: 10px;
 
 }
-.eqip_box_style{
+
+.eqip_box_style {
     margin-top: 1px;
     border-style: solid;
     border-width: 5px;
@@ -87,15 +189,17 @@
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    
+
 }
-#uploader{
+
+#uploader {
     -webkit-appearance: none;
-    appearance:none;
+    appearance: none;
     width: 50%;
     margin-bottom: 10px
 }
-.minputfile{
+
+.minputfile {
     margin-left: 20px;
     display: flex;
     min-height: 100vh;
@@ -106,6 +210,7 @@
     justify-content: center;
     flex-direction: column;
 }
+
 .mbox {
     border-style: solid;
     border-radius: 5px !important;
@@ -3648,13 +3753,15 @@ input[type=range] + .thumb {
     -moz-font-feature-settings: 'liga';
     font-feature-settings: 'liga';
 }
-.mycontainer{
+
+.mycontainer {
     margin: 0 auto;
     width: auto;
     background-repeat: no-repeat;
     background-position: center;
-    
+
 }
+
 .container {
     margin: 0 auto;
     max-width: 1280px;
